--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <li class="navbar-item">
               <div class="icon-box gradient-box">
                 <a href="assets/cv/Frontend Developer Resume Faisal.pdf" download="Frontend Developer Resume Faisal.pdf" target="_blank">
-                  <button class="navbar-link"><i class="fa-solid fa-download"></i></button>
+                  <button class="navbar-link">Download CV <i class="fa-solid fa-download"></i></button>
                 </a>
               </div>
             </li>
