--- a/index.html
+++ b/index.html
@@ -202,17 +202,7 @@
             <h3 class="h3 service-title">What i'm doing</h3>
 
             <ul class="service-list">
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img src="./assets/images/icon-design.svg" alt="design icon" width="40"/>
-                </div>
-                <div class="service-content-box">
-                  <h6 class="h5 service-item-title">2019 - 2021</h6>
-                  <h4 class="h4">Junior Graphics Designer</h4>
-                  <p class="service-item-text">Behance | MFaisalCreations</p>
-                </div>
-              </li>
-
+             
               <li class="service-item">
                 <div class="service-icon-box">
                   <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40"/>
@@ -225,6 +215,18 @@
                   </p>
                 </div>
               </li>
+
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img src="./assets/images/icon-design.svg" alt="design icon" width="40"/>
+                </div>
+                <div class="service-content-box">
+                  <h6 class="h5 service-item-title">2019 - 2021</h6>
+                  <h4 class="h4">Junior Graphics Designer</h4>
+                  <p class="service-item-text">Behance | MFaisalCreations</p>
+                </div>
+              </li>
+
             </ul>
           </section>
 
@@ -496,11 +498,19 @@
               <h3 class="h3">Experience</h3>
             </div>
 
-            <ol class="timeline-list">              
+            <ol class="timeline-list">
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Finasal Tech</h4>
+                <span><strong>Designation:</strong>&nbsp;ERP Developer</span>
+                <span><strong>Duration:</strong>&nbsp;Aug 2024 - Present</span>
+                <p class="timeline-text">I currently work as an ERP Developer at a Finasal Tech company, where I use .NET to develop and enhance various ERP modules. My role involves maintaining different ERP modules and adding new modules to improve system functionality and optimize business processes.</p>
+              </li>
+
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Query Provider</h4>
                 <span><strong>Designation:</strong>&nbsp;Frontend Developer</span>
-                <span><strong>Duration:</strong>&nbsp;Sep 2023 - Present</span>
+                <span><strong>Duration:</strong>&nbsp;Sep 2023 - July 2024</span>
                 <p class="timeline-text">I worked as a Frontend Developer at Query Provider, where I developed and maintained multiple responsive and user-friendly websites across various industries. My work included projects such as Point of Sale systems, business websites, and restaurant management systems. I focused on creating user-centric interfaces to enhance usability and user engagement while collaborating with the team to deliver high-quality, functional, and visually appealing web solutions tailored to client needs.</p>
               </li>
               <li class="timeline-item">
@@ -565,11 +575,23 @@
               </li>
 
               <li class="clients-item skills">
-                <img src="./assets/images/skill/react.svg" alt="Skill"/>
+                <img src="./assets/images/skill/csharp.svg" alt="Skill"/>
               </li>
 
               <li class="clients-item skills">
-                <img src="./assets/images/skill/figma.png" alt="Skill"/>
+                <img src="./assets/images/skill/dot_net.svg" alt="Skill"/>
+              </li>
+
+              <li class="clients-item skills">
+                <img src="./assets/images/skill/mysql.svg" alt="Skill"/>
+              </li>
+
+              <li class="clients-item skills">
+                <img src="./assets/images/skill/sqlserver.png" alt="Skill"/>
+              </li>
+
+              <li class="clients-item skills">
+                <img src="./assets/images/skill/github.svg" alt="Skill"/>
               </li>
 
               <li class="clients-item skills">
