--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <div class="info-content">
             <h1 class="name" title="Muhammad Faisal">Faisal Saleem</h1>
-            <p class="title">Frontend Developer</p>
+            <p class="title">Full Stack Developer</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
