--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
             <li class="navbar-item">
               <div class="icon-box gradient-box">
-                <a href="assets/cv/Frontend Developer Resume Faisal.pdf" download="Frontend Developer Resume Faisal.pdf" target="_blank">
+                <a href="assets/cv/Full Stack Developer.pdf" download="Full Stack Developer.pdf" target="_blank">
                   <button class="navbar-link"><i class="fa-solid fa-download"></i></button>
                 </a>
               </div>
