--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
           <div class="info-content">
             <h1 class="name" title="Muhammad Faisal">Faisal Saleem</h1>
-            <p class="title">Full Stack Developer</p>
+            <p class="title">Joiner ERP Developer</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
@@ -84,7 +84,7 @@
                 <p class="contact-title">Phone</p>
 
                 <a href="tel:+923080226566" class="contact-link"
-                  >(+92) 308-0226566</a
+                  >(+92) 313-4240390</a
                 >
               </div>
             </li>
@@ -96,7 +96,7 @@
 
               <div class="contact-info">
                 <p class="contact-title">Website</p>
-                <a href="https://fwsp.me" target="_blank" class="contact-link"
+                <a href="http://fwsp.me" target="_blank" class="contact-link"
                   >fwsp.me</a
                 >
               </div>
@@ -171,7 +171,7 @@
 
             <li class="navbar-item">
               <div class="icon-box gradient-box">
-                <a href="assets/cv/Full Stack Developer.pdf" download="Full Stack Developer.pdf" target="_blank">
+                <a href="assets/cv/M Faisal Joiner ERP Developer.pdf" download="M Faisal Joiner ERP Developer.pdf" target="_blank">
                   <button class="navbar-link"><i class="fa-solid fa-download"></i></button>
                 </a>
               </div>
@@ -190,8 +190,10 @@
 
           <section class="about-text">
             <p>
-              I have over two years of experience as a Frontend Developer, including more than one year at Allied Tajar, where I contributed to the development of ERP software and the company's website. My expertise lies in building responsive, user-centric interfaces, delivering solutions that enhance both functionality and user experience.
-            </p>
+              Full Stack Developer with 1 year of experience in .NET, specializing in ERP systems and web
+development. Skilled in building user-centric applications, integrating databases, and optimizing
+system performance.
+              </p>
           </section>
 
           <!--
@@ -502,9 +504,11 @@
 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Finasal Tech</h4>
-                <span><strong>Designation:</strong>&nbsp;ERP Developer</span>
+                <span><strong>Designation:</strong>&nbsp;Joiner ERP Developer</span>
                 <span><strong>Duration:</strong>&nbsp;Aug 2024 - Present</span>
-                <p class="timeline-text">I currently work as an ERP Developer at a Finasal Tech company, where I use .NET to develop and enhance various ERP modules. My role involves maintaining different ERP modules and adding new modules to improve system functionality and optimize business processes.</p>
+                <p class="timeline-text">Junior ERP Developer at Finasal Tech, specializing in .NET and the Repository Design Pattern.
+Developed WhatsApp-like modules for messaging and document sharing while ensuring
+scalable and maintainable ERP solutions.</p>
               </li>
 
               <li class="timeline-item">
